<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- new post linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/newPostCreateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celeb_name"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/newPostCelebNameSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin">

            </Spinner>

            <ImageView
                android:id="@+id/newPostCelebImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                android:src="@mipmap/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPostDescEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:hint="@string/hint_post_desc" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/newPostMasterImageButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:background="@color/White"
                android:scaleType="fitXY"
                android:src="@drawable/plus" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPostViewsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:hint="@string/hint_post_views"
                    android:inputType="number"
                    android:padding="@dimen/large_margin" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/newPostCreateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:enabled="false"
                android:padding="@dimen/large_margin"
                android:text="@string/btn_create"
                android:textSize="@dimen/large_text" />
        </LinearLayout>
        <!-- end of new post linear layout -->

        <!-- new post images linear layout -->
        <LinearLayout
            android:id="@+id/newPostSaveLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/newPostDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/large_margin"
                android:text="@string/hint_post_desc"
                android:textColor="@color/Black"
                android:textSize="@dimen/large_text" />


            <ImageView
                android:id="@+id/newPostMasterImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                android:src="@mipmap/logo" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/large_margin"
                android:text="@string/add_post_images"
                android:textColor="@color/Black"
                android:textSize="@dimen/large_text" />

            <ImageButton
                android:id="@+id/newPostAddImagesButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:background="@color/White"
                android:scaleType="fitXY"
                android:src="@drawable/plus" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/newPostImageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/newPostImageCountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/large_margin"
                android:text="@string/image_count"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/newPostSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                android:enabled="false"
                android:padding="@dimen/large_margin"
                android:text="@string/btn_save_post"
                android:textSize="@dimen/large_text" />
        </LinearLayout>
        <!-- end of new post linear layout -->

    </LinearLayout>

</ScrollView>
