<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="@dimen/elevation_height"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/singleCelebPostImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@mipmap/logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/very_small_margin"
                android:background="@color/LightGrey" />

            <TextView
                android:id="@+id/singleCelebPostDescTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="@string/hint_post_desc"
                android:textColor="@color/Black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/singleCelebPostImageCountTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/image_count"
                    android:textSize="@dimen/medium_text" />

                <TextView
                    android:id="@+id/singleCelebPostViewsTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_post_views"
                    android:textSize="@dimen/medium_text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>