<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="@dimen/elevation_height"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- celeb image, name and post description layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_params"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/singlePostCelebProfileImageView"
                    android:layout_width="@dimen/profile_image_params"
                    android:layout_height="@dimen/profile_image_params"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/logo" />

                <TextView
                    android:id="@+id/singlePostCelebNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_toRightOf="@id/singlePostCelebProfileImageView"
                    android:gravity="center_vertical"
                    android:text="@string/hint_celeb_name"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/very_small_margin"
                android:background="@color/LightGrey" />

            <ImageView
                android:id="@+id/singlePostImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY"
                android:src="@mipmap/logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/very_small_margin"
                android:background="@color/LightGrey" />

            <TextView
                android:id="@+id/singlePostDescTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="@string/hint_post_desc"
                android:textColor="@color/Black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/singlePostImageCountTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/image_count"
                    android:textSize="@dimen/medium_text" />

                <TextView
                    android:id="@+id/singlePostViewsTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_post_views"
                    android:textSize="@dimen/medium_text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>